moved keychain functions to dsl_keychain.c zio_crypt_key_t functions remain in zio_crypt.c. Modified calls from zfs_ioc_create() down to dsl_dir_create_sync() to pass a wrapping key  (currently unused). Keychain and key calls still untested.

--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -31,6 +31,7 @@ $(MODULE)-objs += dsl_deadlist.o
 $(MODULE)-objs += dsl_deleg.o
 $(MODULE)-objs += dsl_bookmark.o
 $(MODULE)-objs += dsl_dir.o
+$(MODULE)-objs += dsl_keychain.o
 $(MODULE)-objs += dsl_pool.o
 $(MODULE)-objs += dsl_prop.o
 $(MODULE)-objs += dsl_scan.o
