a lot of progress towards getting libicp to build in userspace. linking still needs to be done for many of the binaries

--- a/lib/libicp/Makefile.am
+++ b/lib/libicp/Makefile.am
@@ -1,17 +1,14 @@
 include $(top_srcdir)/config/Rules.am
 
+# VPATH = \
+# 	$(top_srcdir)/lib/libicp \
+# 	$(top_srcdir)/lib/libicp/$(TARGET_ASM_DIR)
+
 VPATH = \
 	$(top_srcdir)/module/icp \
 	$(top_srcdir)/module/icp/$(TARGET_ASM_DIR)
 
-#VPATH = \
-#	$(top_srcdir)/lib/libicp \
-#	$(top_srcdir)/lib/libicp/$(TARGET_ASM_DIR)
-
 AM_CFLAGS += $(DEBUG_STACKFLAGS) $(FRAME_LARGER_THAN)
-
-#SUBDIRS = include #$(TARGET_ASM_DIR)
-#DIST_SUBDIRS = include # asm-generic asm-i386 asm-x86_64
 
 DEFAULT_INCLUDES += \
 	-I$(top_srcdir)/include \
@@ -19,16 +16,18 @@ DEFAULT_INCLUDES += \
 	-I$(top_srcdir)/lib/libspl/include
 
 AM_CCASFLAGS = \
+	-I$(top_srcdir)/include \
 	-I$(top_srcdir)/module/icp/include
+	-I$(top_srcdir)/lib/libspl/include
 
 noinst_LTLIBRARIES = libicp.la
 
-#asm-x86_64_C = aes/aeskey.c
-#asm-x86_64_ASM = aes/aes_amd64.S
-#asm-i386_C =
-#asm-i386_ASM =
-#asm-generic_C =
-#asm-generic_ASM =
+# asm-x86_64_C = aes/aeskey.c
+# asm-x86_64_ASM = aes/aes_amd64.S
+# asm-i386_C =
+# asm-i386_ASM =
+# asm-generic_C =
+# asm-generic_ASM =
 
 USER_C =
 
@@ -49,8 +48,6 @@ KERNEL_C = \
 	algs/modes/ccm.c \
 	algs/modes/ecb.c \
 	algs/sha2/sha2.c \
-	asm-x86_64/aes/aeskey.c \
-	icp.mod.c \
 	illumos-crypto.c \
 	io/aes.c \
 	io/sha2_mod.c \
@@ -62,14 +59,13 @@ KERNEL_C = \
 	core/kcf_callprov.c \
 	core/kcf_mech_tabs.c \
 	core/kcf_prov_tabs.c \
-	aes/aeskey.c
+	asm-x86_64/aes/aeskey.c
 
 #	$($(TARGET_ASM_DIR)_C)
 
 KERNEL_ASM = \
-	aes/aes_amd64.S
+	asm-x86_64/aes/aes_amd64.S
 	
-#
 #	$($(TARGET_ASM_DIR)_ASM)
 
 nodist_libicp_la_SOURCES = \
@@ -77,8 +73,11 @@ nodist_libicp_la_SOURCES = \
 	$(USER_ASM) \
 	$(KERNEL_C) \
 	$(KERNEL_ASM)
-
+	
 libicp_la_LIBADD = -lrt
+
+# libicp_la_LIBADD = \
+# 	$(top_builddir)/lib/libzpool/libzpool.la
 
 EXTRA_DIST = $(USER_C)
 
