--- a/lib/libzpool/Makefile.am
+++ b/lib/libzpool/Makefile.am
@@ -14,7 +14,6 @@ DEFAULT_INCLUDES += \
 lib_LTLIBRARIES = libzpool.la
 
 USER_C = \
-	crypto.c \
 	kernel.c \
 	taskq.c \
 	util.c
@@ -122,6 +121,7 @@ libzpool_la_LIBADD = \
 	$(top_builddir)/lib/libunicode/libunicode.la \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libnvpair/libnvpair.la
+	$(top_builddir)/lib/libicp/libicp.la
 
 libzpool_la_LIBADD += $(ZLIB)
 libzpool_la_LDFLAGS = -version-info 2:0:0
