--- a/cmd/zfs/Makefile.am
+++ b/cmd/zfs/Makefile.am
@@ -17,8 +17,7 @@ zfs_LDADD = \
 	$(top_builddir)/lib/libuutil/libuutil.la \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la \
-	$(top_builddir)/lib/libzfs_core/libzfs_core.la \
-	$(top_builddir)/lib/libicp/libicp.la
+	$(top_builddir)/lib/libzfs_core/libzfs_core.la
 
 zfs_LDADD += $(ZLIB)
 zfs_LDFLAGS = -pthread
