--- a/module/icp/Makefile.in
+++ b/module/icp/Makefile.in
@@ -5,12 +5,20 @@ MODULE := icp
 
 TARGET_ASM_DIR = @TARGET_ASM_DIR@
 
-asm-x86_64_OBJS := $(TARGET_ASM_DIR)/aes/aeskey.o 
-asm-x86_64_OBJS += $(TARGET_ASM_DIR)/aes/aes_amd64.o
-asm-x86_64_OBJS += $(TARGET_ASM_DIR)/aes/aes_intel.o
-asm-x86_64_OBJS += $(TARGET_ASM_DIR)/modes/gcm_intel.o
-asm-i386_OBJS :=
-asm-generic_OBJS :=
+ifeq ($(TARGET_ASM_DIR), asm-x86_64)
+ASM_SOURCES := asm-x86_64/aes/aeskey.o
+ASM_SOURCES += asm-x86_64/aes/aes_amd64.o
+ASM_SOURCES += asm-x86_64/aes/aes_intel.o
+ASM_SOURCES += asm-x86_64/modes/gcm_intel.o
+endif
+
+ifeq ($(TARGET_ASM_DIR), asm-i386)
+ASM_SOURCES :=
+endif
+	
+ifeq ($(TARGET_ASM_DIR), asm-generic)
+ASM_SOURCES :=
+endif
 
 EXTRA_CFLAGS = $(ZFS_MODULE_CFLAGS) @KERNELCPPFLAGS@
 
@@ -46,4 +54,4 @@ $(MODULE)-objs += algs/modes/modes.o
 $(MODULE)-objs += algs/aes/aes_impl.o
 $(MODULE)-objs += algs/aes/aes_modes.o
 $(MODULE)-objs += algs/sha2/sha2.o
-$(MODULE)-objs += $($(TARGET_ASM_DIR)_OBJS)
+$(MODULE)-objs += $(ASM_SOURCES)
