--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -65,8 +65,8 @@ modules_uninstall:
 
 distdir:
 	list='$(subdir-m)'; for subdir in $$list; do \
-		(find @top_srcdir@/module/$$subdir -name '*.c' -o -name '*.h' |\
-		xargs /bin/cp -t $$distdir/$$subdir); \
+		(cd @top_srcdir@/module && find $$subdir -name '*.c' -o -name '*.h' |\
+		xargs /bin/cp --parents -t $$distdir); \
 	done
 
 distclean maintainer-clean: clean
