--- a/module/Makefile.in
+++ b/module/Makefile.in
@@ -13,6 +13,8 @@ ZFS_MODULE_CFLAGS += -include @abs_top_builddir@/zfs_config.h
 ZFS_MODULE_CFLAGS += -I@abs_top_srcdir@/include -I@SPL@/include -I@SPL@
 export ZFS_MODULE_CFLAGS
 
+SUBDIR_TARGETS = icp
+
 modules:
 	@# Make the exported SPL symbols available to these modules.
 	@# They may be in the root of SPL_OBJ when building against
@@ -29,6 +31,9 @@ modules:
 		"*** - @SPL_OBJ@/module/@SPL_SYMBOLS@\n"; \
 		exit 1; \
 	fi
+	list='$(SUBDIR_TARGETS)'; for targetdir in $$list; do \
+		$(MAKE) -C $$targetdir; \
+	done
 	$(MAKE) -C @LINUX_OBJ@ SUBDIRS=`pwd` @KERNELMAKE_PARAMS@ CONFIG_ZFS=m $@
 
 clean:
@@ -65,7 +70,7 @@ modules_uninstall:
 
 distdir:
 	list='$(subdir-m)'; for subdir in $$list; do \
-		(cd @top_srcdir@/module && find $$subdir -name '*.c' -o -name '*.h' |\
+		(cd @top_srcdir@/module && find $$subdir -name '*.c' -o -name '*.h' -o -name '*.S' |\
 		xargs /bin/cp --parents -t $$distdir); \
 	done
 
