--- a/module/icp/Makefile.in
+++ b/module/icp/Makefile.in
@@ -56,3 +56,23 @@ $(MODULE)-objs += algs/aes/aes_impl.o
 $(MODULE)-objs += algs/aes/aes_modes.o
 $(MODULE)-objs += algs/sha2/sha2.o
 $(MODULE)-objs += $(ASM_SOURCES)
+
+ICP_DIRS = \
+	api \
+	core \
+	spi \
+	io \
+	os \
+	algs \
+	algs/aes \
+	algs/modes \
+	algs/sha2 \
+	asm-x86_64 \
+	asm-x86_64/aes \
+	asm-x86_64/modes \
+	asm-x86_64/sha2 \
+	asm-i386 \
+	asm-generic
+
+all:
+	mkdir -p $(ICP_DIRS)
