--- a/lib/libzpool/Makefile.am
+++ b/lib/libzpool/Makefile.am
@@ -54,6 +54,7 @@ KERNEL_C = \
 	dsl_deadlist.c \
 	dsl_deleg.c \
 	dsl_dir.c \
+	dsl_keychain.c \
 	dsl_pool.c \
 	dsl_prop.c \
 	dsl_scan.c \
@@ -115,6 +116,7 @@ KERNEL_C = \
 	zio.c \
 	zio_checksum.c \
 	zio_compress.c \
+	zio_crypt.c \
 	zio_inject.c \
 	zle.c \
 	zrlock.c
